[gd_scene load_steps=9 format=2]

[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Pickups/Health_Pickup.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Health_Pickup.png" type="Texture" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[node name="HealthPickup" type="RigidBody2D" groups=[
"Pickups",
]]
gravity_scale = 0.0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
collision_mask = 28
damage = -3
knockback = 1000

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 1 )]
collision_layer = 1

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 3

[node name="NetworkTickRate" type="Timer" parent="."]
wait_time = 0.03
autostart = true
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="NetworkTickRate" to="." method="_on_Network_Tick_Rate_timeout"]

[editable path="Hitbox"]

[editable path="Hurtbox"]
